force-app/main/default/objects/LT_Route__c/LT_Route__c.object-meta.xml
<CustomObject>
    <description>Rota - LogiTrack Operations 360.</description>
    <label>Rota</label>
    <nameField>
        <displayFormat>ROT-{000000}</displayFormat>
        <label>Codigo da Rota</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>