force-app/main/default/objects/LT_Route__c/fields/LT_Attempts_Count__c.field-meta.xml
<CustomField>
    <fullName>LT_Attempts_Count__c</fullName>
    <description>Total de tentativas de entrega registradas na rota.</description>
    <label>Tentativas na Rota</label>
    <summaryForeignKey>LT_Delivery_Attempt__c.LT_Route__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>