force-app/main/default/objects/LT_Route__c/fields/LT_Base__c.field-meta.xml
<CustomField>
    <fullName>LT_Base__c</fullName>
    <description>Base que monta e despacha a rota.</description>
    <label>Base de Entrega</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Rotas</relationshipLabel>
    <relationshipName>LT_Routes</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A rota deve partir de uma Base de Entrega.</errorMessage>
        <filterItems>
            <field>LT_Logistics_Unit__c.Unit_Type__c</field>
            <operation>equals</operation>
            <value>Base de Entrega</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
</CustomField>