force-app/main/default/objects/LT_Route__c/fields/LT_Cage_Code__c.field-meta.xml
<CustomField>
    <fullName>LT_Cage_Code__c</fullName>
    <description>Identificador da gaiola da rota na base.</description>
    <label>Gaiola</label>
    <type>Text</type>
    <length>20</length>
</CustomField>