force-app/main/default/objects/LT_Route__c/fields/LT_Delivered_Count__c.field-meta.xml
<CustomField>
    <fullName>LT_Delivered_Count__c</fullName>
    <description>Tentativas com resultado Entregue na rota.</description>
    <label>Entregas Concluidas</label>
    <summaryForeignKey>LT_Delivery_Attempt__c.LT_Route__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <summaryFilterItems>
        <field>LT_Delivery_Attempt__c.LT_Is_Success__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <type>Summary</type>
</CustomField>