force-app/main/default/objects/LT_Route__c/fields/LT_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>LT_Departure_Time__c</fullName>
    <description>Data/hora de saida do motorista.</description>
    <label>Saida</label>
    <type>DateTime</type>
</CustomField>