force-app/main/default/objects/LT_Route__c/fields/LT_Destination_Unit__c.field-meta.xml
<CustomField>
    <fullName>LT_Destination_Unit__c</fullName>
    <description>Unidade de destino da mini transferencia.</description>
    <label>Unidade de Destino</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Rotas de Destino</relationshipLabel>
    <relationshipName>LT_Destination_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>