force-app/main/default/objects/LT_Route__c/fields/LT_Distance_Km__c.field-meta.xml
<CustomField>
    <fullName>LT_Distance_Km__c</fullName>
    <description>Distancia da rota. Mini Transferencia so e elegivel acima de 60 km.</description>
    <label>Distancia (km)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
</CustomField>