force-app/main/default/objects/LT_Route__c/fields/LT_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver__c</fullName>
    <description>Motorista responsavel pela rota.</description>
    <label>Motorista</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Rotas</relationshipLabel>
    <relationshipName>LT_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>