force-app/main/default/objects/LT_Route__c/fields/LT_Loaded_Packages__c.field-meta.xml
<CustomField>
    <fullName>LT_Loaded_Packages__c</fullName>
    <description>Quantidade efetivamente bipada / carregada.</description>
    <label>Pacotes Carregados</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>