force-app/main/default/objects/LT_Route__c/fields/LT_MR_Eligible__c.field-meta.xml
<CustomField>
    <fullName>LT_MR_Eligible__c</fullName>
    <description>Mini Transferencia so e valida para destinos a mais de 60 km.</description>
    <label>MR Elegivel</label>
    <formula>OR(NOT(ISPICKVAL(LT_Route_Type__c, "Mini Transferencia")), AND(NOT(ISBLANK(LT_Distance_Km__c)), LT_Distance_Km__c &gt; 60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>