force-app/main/default/objects/LT_Route__c/fields/LT_Planned_Packages__c.field-meta.xml
<CustomField>
    <fullName>LT_Planned_Packages__c</fullName>
    <description>Quantidade prevista de pacotes na rota.</description>
    <label>Pacotes Planejados</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>