force-app/main/default/objects/LT_Route__c/fields/LT_Return_Time__c.field-meta.xml
<CustomField>
    <fullName>LT_Return_Time__c</fullName>
    <description>Data/hora de retorno do motorista.</description>
    <label>Retorno</label>
    <type>DateTime</type>
</CustomField>