force-app/main/default/objects/LT_Route__c/fields/LT_Route_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Route_Date__c</fullName>
    <description>Dia de operacao da rota.</description>
    <label>Data da Rota</label>
    <required>true</required>
    <type>Date</type>
</CustomField>