force-app/main/default/objects/LT_Route__c/fields/LT_Route_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Route_Type__c</fullName>
    <description>Rota de entrega Last Mile ou de Mini Transferencia entre unidades.</description>
    <label>Tipo de Rota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Last Mile (Entrega)</fullName>
                <default>true</default>
                <label>Last Mile (Entrega)</label>
            </value>
            <value>
                <fullName>Mini Transferencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>