force-app/main/default/objects/LT_Route__c/fields/LT_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Status__c</fullName>
    <description>Etapa atual da rota.</description>
    <label>Status da Rota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planejada</fullName>
                <default>true</default>
                <label>Planejada</label>
            </value>
            <value>
                <fullName>Em Triagem</fullName>
            </value>
            <value>
                <fullName>Carregada</fullName>
            </value>
            <value>
                <fullName>Em Rota</fullName>
            </value>
            <value>
                <fullName>Concluida</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>