force-app/main/default/objects/LT_Route__c/fields/LT_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>LT_Success_Rate__c</fullName>
    <description>Percentual de tentativas da rota com entrega concluida.</description>
    <label>Taxa de Sucesso</label>
    <formula>IF(OR(ISBLANK(LT_Attempts_Count__c), LT_Attempts_Count__c = 0), 0, LT_Delivered_Count__c / LT_Attempts_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>