force-app/main/default/objects/LT_Route__c/fields/LT_Target_City__c.field-meta.xml
<CustomField>
    <fullName>LT_Target_City__c</fullName>
    <description>Cidade predominante da rota.</description>
    <label>Cidade Alvo</label>
    <type>Text</type>
    <length>80</length>
</CustomField>