force-app/main/default/objects/LT_Route__c/fields/LT_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>LT_Vehicle__c</fullName>
    <description>Veiculo utilizado na rota.</description>
    <label>Veiculo</label>
    <referenceTo>LT_Vehicle__c</referenceTo>
    <relationshipLabel>Rotas</relationshipLabel>
    <relationshipName>LT_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>