force-app/main/default/objects/LT_Route__c/validationRules/LT_Route_Concluded_Requires_Return.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Route_Concluded_Requires_Return</fullName>
    <active>true</active>
    <description>Rota Concluida exige data/hora de retorno.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Concluida"), ISBLANK(LT_Return_Time__c))</errorConditionFormula>
    <errorDisplayField>LT_Return_Time__c</errorDisplayField>
    <errorMessage>Informe o horario de Retorno ao concluir a rota.</errorMessage>
</ValidationRule>