force-app/main/default/objects/LT_Route__c/validationRules/LT_Route_In_Route_Requires_Driver.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Route_In_Route_Requires_Driver</fullName>
    <active>true</active>
    <description>Rota Em Rota ou Concluida exige motorista.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(LT_Status__c, "Em Rota"), ISPICKVAL(LT_Status__c, "Concluida")), ISBLANK(LT_Driver__c))</errorConditionFormula>
    <errorDisplayField>LT_Driver__c</errorDisplayField>
    <errorMessage>Defina o motorista antes de colocar a rota Em Rota.</errorMessage>
</ValidationRule>