force-app/main/default/objects/LT_Route__c/validationRules/LT_Route_Loaded_Not_Above_Planned.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Route_Loaded_Not_Above_Planned</fullName>
    <active>true</active>
    <description>Pacotes carregados nao podem exceder o planejado.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_Planned_Packages__c)), LT_Loaded_Packages__c &gt; LT_Planned_Packages__c)</errorConditionFormula>
    <errorDisplayField>LT_Loaded_Packages__c</errorDisplayField>
    <errorMessage>Pacotes Carregados nao pode ser maior que Pacotes Planejados.</errorMessage>
</ValidationRule>