force-app/main/default/objects/LT_Route__c/validationRules/LT_Route_Packages_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Route_Packages_Positive</fullName>
    <active>true</active>
    <description>Quantidades de pacotes nao podem ser negativas.</description>
    <errorConditionFormula>OR(LT_Planned_Packages__c &lt; 0, LT_Loaded_Packages__c &lt; 0)</errorConditionFormula>
    <errorMessage>As quantidades de pacotes nao podem ser negativas.</errorMessage>
</ValidationRule>