force-app/main/default/objects/LT_Route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Base__c</columns>
    <columns>LT_Route_Date__c</columns>
    <columns>LT_Route_Type__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Driver__c</columns>
    <columns>LT_Loaded_Packages__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>