force-app/main/default/objects/LT_Route__c/listViews/Em_Rota.listView-meta.xml
<ListView>
    <fullName>Em_Rota</fullName>
    <columns>NAME</columns>
    <columns>LT_Base__c</columns>
    <columns>LT_Route_Date__c</columns>
    <columns>LT_Driver__c</columns>
    <columns>LT_Loaded_Packages__c</columns>
    <columns>LT_Success_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Status__c</field>
        <operation>equals</operation>
        <value>Em Rota,Carregada</value>
    </filters>
    <label>Rotas Em Andamento</label>
</ListView>